--- a/WEB/style.css
+++ b/WEB/style.css
@@ -28,13 +28,17 @@ body{
 
 /* NAV-BAR */
 #nav-bar{
-    height: 80px;
+    width: 100%; height: 80px;
     display: flex;
+    justify-content: center;
     align-items: center;
 }
 
 #nav-bar > header{
-    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #nav-bar-container{
@@ -234,8 +238,22 @@ body{
 /* Vagas MAIN*/
 
 #vagas{
+    text-align: center;
     padding: 96px 0;
     height: 1798px;
     display: grid;
     justify-content: center;
+}
+
+#vagas-titulo{
+    font-family: var(--fonte);
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 44px;
+    letter-spacing: -0.02em;
+    text-align: center;
+}
+
+#vagas-descricao{
+    
 }
