--- a/WEB/style.css
+++ b/WEB/style.css
@@ -41,13 +41,15 @@
 
 #nav-bar > header{
     width: 100%;
-
+    display: flex;
+    justify-content: center;
 }
 
 #nav-bar-container{
+    width: 1240px;
     height: 44px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     padding: 0px 32px;
     
@@ -358,7 +360,7 @@
 
 #depoimentos{
     height: 500px;
-    padding: 0 0 96px 0;
+    padding: 96px 96px 0 96px;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -380,7 +382,6 @@
 }
 
 #depoimentos-titulo{
-    width: 1088px;
     height: 88px;
     font-family: var(--fonte);
     font-size: 36px;
